# evidentloop

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
.sopify/: project.md
.sopify/blueprint/: README.md  background.md  design.md  tasks.md
.sopify/history/: index.md
.sopify/plan/20260707_audit_graph_init/: background.md  design.md  (+1 more)
change_audit/: __init__.py  __main__.py  cli.py  validation.py
change_audit/adapters/: __init__.py  gitdiff.py
change_audit/audit/: __init__.py  adapter.py  finalize.py
change_audit/renderers/: __init__.py  html.py
change_audit/review/: __init__.py  adjudicator.py  budget.py  cli.py  config.py  eval.py  formatter.py  ingest.py  normalizer.py  pack.py  reviewer.py  schema.py  verify.py
change_audit/schemas/: audit-v0.schema.json
docs/: ai-host-integration.md  alpha-trial.md  data-model.md  index.html  v0-scope.md  zh-CN.html
docs/assets/: site.css
evidentloop/: __init__.py  __main__.py  api.py  cli.py  demo.py  doctor.py  validation.py  versions.py
evidentloop/adapters/: gitdiff.py
evidentloop/audit/: __init__.py  adapter.py  feedback.py  finalize.py  fix_verification.py  revision.py  summary.py
evidentloop/demo_resources/: __init__.py  fixture.json
evidentloop/renderers/: html.py  hunk.py
evidentloop/review/: __init__.py  adjudicator.py  change_summary.py  claims.py  ingest.py  normalizer.py  pack.py  schema.py
evidentloop/schemas/: audit-v0.3.schema.json  audit-v0.4.schema.json  audit-v0.5.schema.json
prompt-lab/: README.md  eval.py  prompt-template.md  run.py
scripts/: build_release_evidence.py  check_release_boundaries.py
skills/evidentloop/: SKILL.md
tests/: __init__.py  audit_helpers.py  git_helpers.py  test_adapter.py  test_agent_skill.py  test_audit_schema.py  test_change_audit_cli.py  test_change_summary.py  test_doctor.py  test_evidentloop_cli.py  test_feedback_js.py  test_feedback_revision.py  test_finalize.py  test_fix_verification.py  test_fix_verification_flow.py  test_gitdiff_adapter.py  test_hunk.py  test_identity_allowlist.py  test_package_resources.py  test_pages.py  test_prepare.py  test_release_boundaries.py  test_renderer.py
tests/fixtures/: audit-v0.4.json  audit-v0.5.json
tests/js/: audit-feedback.test.cjs
tests/review/: test_adjudicator.py  test_budget.py  test_cli.py  test_config.py  test_eval_harness.py  test_formatter.py  test_normalizer.py  test_pack.py  test_prompt_lab_run.py  test_render_prompt_ingest.py  test_reviewer.py  test_schema.py  test_verify.py
(+79 files in other folders)
