[project]
name = "evidentloop"
version = "0.1.0a3"
description = "Traceable code review artifacts for local Git diffs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jinja2>=3.1",
  "jsonschema>=4.23",
]

[project.scripts]
evidentloop = "evidentloop.cli:main"

[project.urls]
Homepage = "https://github.com/evidentloop/evidentloop"
Repository = "https://github.com/evidentloop/evidentloop"
Issues = "https://github.com/evidentloop/evidentloop/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "pyyaml>=6.0",
  "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["evidentloop*"]

[tool.setuptools.package-data]
evidentloop = [
  "schemas/*.json",
  "renderers/templates/*.j2",
  "renderers/static/*.css",
  "renderers/static/*.js",
  "review/core/*.md",
  "demo_resources/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
